// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`useTradeQuotePolling() When wallet is NOT connected Then the "receiver" field in the quote request should be undefined 1`] = `
{
  "account": "0xD711bD26Bf5B153001a7C0ACcb289782b6f775e9",
  "amount": 10000000n,
  "appCode": "CoW Swap",
  "buyTokenAddress": "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48",
  "buyTokenChainId": 1,
  "buyTokenDecimals": 6,
  "ethFlowContractOverride": {
    "1": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
    "10": "0x764fE4aa1FF493cf39931c7923C8ff5837596504",
    "100": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
    "11155111": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
    "130": "0x38C03729153BCCF6a281DaF41D7C6a14C543F1D7",
    "137": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
    "42161": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
    "43114": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
    "4663": "0xC1Ee77e8a1B85D5EED702a9bB435f434408A4d29",
    "56": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
    "57073": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
    "59144": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
    "8453": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
    "9745": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
  },
  "kind": "sell",
  "owner": "0xD711bD26Bf5B153001a7C0ACcb289782b6f775e9",
  "partiallyFillable": false,
  "receiver": undefined,
  "sellTokenAddress": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
  "sellTokenChainId": 1,
  "sellTokenDecimals": 18,
  "validFor": 1800,
}
`;

exports[`useTradeQuotePolling() When wallet is connected Then should put account address into "receiver" field in the quote request 1`] = `
[
  {
    "account": "0x333333f332a06ecb5d20d35da44ba07986d6e203",
    "amount": 10000000n,
    "appCode": "CoW Swap",
    "buyTokenAddress": "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48",
    "buyTokenChainId": 1,
    "buyTokenDecimals": 6,
    "ethFlowContractOverride": {
      "1": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
      "10": "0x764fE4aa1FF493cf39931c7923C8ff5837596504",
      "100": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
      "11155111": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
      "130": "0x38C03729153BCCF6a281DaF41D7C6a14C543F1D7",
      "137": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
      "42161": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
      "43114": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
      "4663": "0xC1Ee77e8a1B85D5EED702a9bB435f434408A4d29",
      "56": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
      "57073": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
      "59144": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
      "8453": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
      "9745": "0xba3cb449bd2b4adddbc894d8697f5170800eadec",
    },
    "kind": "sell",
    "owner": "0x333333f332a06ecb5d20d35da44ba07986d6e203",
    "partiallyFillable": false,
    "receiver": "0x333333f332a06ecb5d20d35da44ba07986d6e203",
    "sellTokenAddress": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
    "sellTokenChainId": 1,
    "sellTokenDecimals": 18,
    "signer": {},
    "validFor": 1800,
  },
  {
    "appData": undefined,
    "getCorrelatedTokens": [Function],
    "getSlippageSuggestion": undefined,
    "quoteRequest": {
      "priceQuality": "optimal",
    },
    "quoteSigner": undefined,
  },
]
`;
